[tool.poetry]
name = "pmsys-pipeline"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.13"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
