[tool.poetry]
name = "pmsys-pipeline"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.13"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
black = "^22.10.0"
pytest = "^7.2.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
matplotlib = "^3.6.2"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
